JG-2003-12-29-0: Enhancem.: qrsh_starter will no longer overwrite the DISPLAY
                            variable if it is already set to enable ssh display 
                            forwarding if ssh is used as transport mechanism for
                            qrsh.
                 Changed:   qrsh_starter
                 Review:    TBD

AD-2003-12-24-1: Bugfix:    Did apply changes of 'AD-2003-12-24-0' to
                            'sge_lock.c'
                 Changed:   uti

AD-2003-12-24-0: Bugfix:    Did fix 'AD-2003-12-22-1' and 'AD-2003-12-23-0'
                 Changed:   cull uti

JG-2003-12-23-0: Enhancem.: Added infrastructure for job logging and basic job
                            logging functionality.
                            Added reporting_params in the global config.
                            Cleanup of sge_conf parsing code.
                 Review:    CR

AD-2003-12-23-1: Enhancem:  Did fix the build
                 Changed:   utilbin

AD-2003-12-23-0: Enhancem:  Thread local storage is now initialized on demand.
                 Changed:   cull

AD-2003-12-22-1: Enhancem:  Thread local storage is now initialized on demand.
                 Changed:   uti

AD-2003-12-22-0: Bugfix:    Did add missing header file
                 Changed:   sgeobj

EB-2003-12-22-1: Bugfix:    fixed bug
                            * installation script should use "queue"
                              object specifier for -?attr options of qconf
                 Review:    MD

EB-2003-12-22-1: Bugfix:    fixed bug
                            * memory leak in sge_qmaster during modification
                              of CQs comlex_values 
                 Review:    CR

EB-2003-12-22-0: Bugfix:    fixed bug
                            * memory access error in libs/uti/sge_hostname.c
                 Review:    CR

EB-2003-12-20-0: Bugfix:    fixed bug
                            * honour initial state correctly