@@ -32,17 +32,19 @@
  */
 
 #ifndef lint
+#if 0
 static const char copyright[] =
 "@(#) Copyright (c) 1983, 1990, 1993, 1994\n\
 	The Regents of the University of California.  All rights reserved.\n";
+#endif
 #endif /* not lint */
 
 #ifndef lint
 #if 0
 static char sccsid[] = "From: @(#)rsh.c	8.3 (Berkeley) 4/6/94";
-#endif
 static const char rcsid[] =
   "$FreeBSD: src/usr.bin/rsh/rsh.c,v 1.16.2.2 1999/08/29 15:32:23 peter Exp $";
+#endif
 #endif /* not lint */
 
 #include <sys/param.h>
