@@ -1,3 +1,7 @@
+AD-2004-01-01-0: Enhancem:  Did add build support for DARWIN 7.*
+                 Changed:   aimk
+                 Review:    TBD
+
 JG-2003-12-29-0: Enhancem.: qrsh_starter will no longer overwrite the DISPLAY
                             variable if it is already set to enable ssh display 
                             forwarding if ssh is used as transport mechanism for
